--- a/LaravelProj/public/css/site.css
+++ b/LaravelProj/public/css/site.css
@@ -14,7 +14,7 @@ body {
     min-width: 720px;
 }
 
-h1, hr, nav, ul, article, div {
+h1, hr, nav, ul, section, article, div {
     position: relative;
     z-index: 10;
 }
@@ -43,6 +43,7 @@ h1 .subtitle {
     font-size: 0.9em;
     margin-left: 10px;
     color: grey;
+    font-style: italic;
 }
 
 .headerButton {
@@ -85,6 +86,18 @@ h1 .subtitle {
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0033FF), to(#005DFF));
     background: -webkit-linear-gradient(0% 0%, 0% 100%, from(#0033FF), to(#005DFF));
     background: -moz-linear-gradient(center top, #0033FF, #005DFF);
+}
+
+section.content {
+    display: inline-block;
+    margin: 4px 0px 20px 20px;
+    width: 600px;
+    padding: 0px 20px;
+    
+    border: 1px solid white;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
 }
 
 article.floatingRight {
